[gd_scene format=3 uid="uid://rvtrrs7ccuto"]

[ext_resource type="Script" uid="uid://c66nwk7silo3l" path="res://Scripts/col_2_v_box_container.gd" id="1_pfwx5"]
[ext_resource type="Resource" uid="uid://ox7rhenr6wdv" path="res://Resources/gamedata.tres" id="2_x7cha"]
[ext_resource type="PackedScene" uid="uid://cvyx0lbujqmp2" path="res://Scenes/prefab/base_job_v_box_container.tscn" id="3_x7cha"]

[node name="col_2_VBoxContainer" type="VBoxContainer" unique_id=607190770]
script = ExtResource("1_pfwx5")
gamedata = ExtResource("2_x7cha")

[node name="RichTextLabel" type="RichTextLabel" parent="." unique_id=602915642]
layout_mode = 2
bbcode_enabled = true
text = "[b]Jobs[/b]"
fit_content = true

[node name="husbandryJobVBoxContainer" parent="." unique_id=1272703202 instance=ExtResource("3_x7cha")]
layout_mode = 2

[node name="job_label" parent="husbandryJobVBoxContainer" index="0" unique_id=350415923]
text = "Husbandry"

[node name="childrearingJobVBoxContainer" parent="." unique_id=50359964 instance=ExtResource("3_x7cha")]
layout_mode = 2

[node name="job_label" parent="childrearingJobVBoxContainer" index="0" unique_id=350415923]
text = "Childrearing"

[node name="huntingJobVBoxContainer" parent="." unique_id=520190639 instance=ExtResource("3_x7cha")]
layout_mode = 2

[node name="job_label" parent="huntingJobVBoxContainer" index="0" unique_id=350415923]
text = "Hunting"

[node name="pillagingJobVBoxContainer" parent="." unique_id=695017986 instance=ExtResource("3_x7cha")]
layout_mode = 2

[node name="job_label" parent="pillagingJobVBoxContainer" index="0" unique_id=350415923]
text = "Pillaging"

[node name="cullingJobVBoxContainer" parent="." unique_id=1822874909 instance=ExtResource("3_x7cha")]
visible = false
layout_mode = 2

[node name="job_label" parent="cullingJobVBoxContainer" index="0" unique_id=350415923]
text = "Culling"

[node name="blank_space" type="Label" parent="." unique_id=2064399575]
layout_mode = 2

[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/neg_all" to="." method="_husbandry_on_neg_all_pressed"]
[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/neg_10" to="." method="_husbandry_on_neg_10_pressed"]
[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/neg_1" to="." method="_husbandry_on_neg_1_pressed"]
[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/pos_1" to="." method="_husbandry_on_pos_1_pressed"]
[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/pos_10" to="." method="_husbandry_on_pos_10_pressed"]
[connection signal="pressed" from="husbandryJobVBoxContainer/HBoxContainer/pos_all" to="." method="_husbandry_on_pos_all_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/neg_all" to="." method="_childrearing_on_neg_all_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/neg_10" to="." method="_childrearing_on_neg_10_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/neg_1" to="." method="_childrearing_on_neg_1_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/pos_1" to="." method="_childrearing_on_pos_1_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/pos_10" to="." method="_childrearing_on_pos_10_pressed"]
[connection signal="pressed" from="childrearingJobVBoxContainer/HBoxContainer/pos_all" to="." method="_childrearing_on_pos_all_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/neg_all" to="." method="_hunting_on_neg_all_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/neg_10" to="." method="_hunting_on_neg_10_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/neg_1" to="." method="_hunting_on_neg_1_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/pos_1" to="." method="_hunting_on_pos_1_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/pos_10" to="." method="_hunting_on_pos_10_pressed"]
[connection signal="pressed" from="huntingJobVBoxContainer/HBoxContainer/pos_all" to="." method="_hunting_on_pos_all_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/neg_all" to="." method="_pillaging_on_neg_all_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/neg_10" to="." method="_pillaging_on_neg_10_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/neg_1" to="." method="_pillaging_on_neg_1_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/pos_1" to="." method="_pillaging_on_pos_1_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/pos_10" to="." method="_pillaging_on_pos_10_pressed"]
[connection signal="pressed" from="pillagingJobVBoxContainer/HBoxContainer/pos_all" to="." method="_pillaging_on_pos_all_pressed"]

[editable path="husbandryJobVBoxContainer"]
[editable path="childrearingJobVBoxContainer"]
[editable path="huntingJobVBoxContainer"]
[editable path="pillagingJobVBoxContainer"]
[editable path="cullingJobVBoxContainer"]
